feat: Implementar sistema de autenticação completo com NextAuth.js
- Adicionar autenticação segura com NextAuth.js
- Implementar sistema híbrido de armazenamento (arquivos no servidor + localStorage no cliente)
- Criar middleware para proteção de rotas administrativas
- Adicionar páginas de login, forgot-password e reset-password
- Configurar provider de credenciais com hash de senha (bcrypt)
- Implementar callbacks JWT e session para gerenciamento de estado
- Adicionar AuthProvider para contexto de autenticação
- Criar usuário admin padrão automaticamente
- Configurar tipos TypeScript para NextAuth
- Adicionar utilitários de validação e debug de autenticação
- Proteger painel administrativo com autenticação obrigatória
- Configurar variáveis de ambiente para NEXTAUTH_URL e NEXTAUTH_SECRET

Credenciais de admin:
- Email: admin@editdata.com.br
- Senha: Admin123!

Correções técnicas:
- Resolver erro 401 Unauthorized em autenticação
- Corrigir problema de localStorage no servidor (window undefined)
- Implementar importação dinâmica para evitar erros de módulo fs no cliente
- Configurar NEXTAUTH_URL com porta correta do servidor

Arquivos principais:
- src/lib/auth.ts - Configuração principal do NextAuth
- src/utils/auth.ts - Funções de autenticação híbridas
- src/utils/auth-server.ts - Funções exclusivas do servidor
- middleware.ts - Proteção de rotas
- src/app/auth/* - Páginas de autenticação
- src/app/api/auth/* - APIs de autenticação

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,15 @@ NEXT_PUBLIC_COMPANY_EMAIL=edinaldobl@editdata.com.br
 # Configurações do Netlify Forms (alternativa ao EmailJS)
 # Nome do formulário no Netlify
 NEXT_PUBLIC_NETLIFY_FORM_NAME=quote-requests
+
+# Configurações do NextAuth.js
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=seu_secret_muito_seguro_aqui_pelo_menos_32_caracteres
+
+# Configurações de Email (Gmail)
+EMAIL_USER=seu_email@gmail.com
+EMAIL_PASSWORD=sua_senha_de_app_do_gmail
+
+# Para produção (Netlify)
+# NEXTAUTH_URL=https://seu-dominio.netlify.app
+# As demais variáveis devem ser configuradas no painel do Netlify
